tests/valid/replace/replace_through_immut_bound_nested_mut_ref.facet
fn f(mut x: unrestricted isize) -> unrestricted isize {
    let mut r = (&mut x) in
    let rr = (&mut r) in
    let old: unrestricted isize = (replace **rr 42) in
    old
}
