tests/invalid/reborrow/write_through_immut_ref.facet
fn f(x: unrestricted isize) -> unrestricted () {
    let r: unrestricted &unrestricted isize = (&x) in
    let _: unrestricted () = (*r = 42) in
    ()
}
